# tg_filtering_bot

./: .flake8  .gitignore  README.md  alembic.ini  install.sh  install_service.sh  mypy.ini  pyproject.toml  run.sh  tg_filtering_bot.service.template
migrations/: env.py
migrations/versions/: 0000_initial.py
tg_filtering_bot/: __main__.py  async_queue.py  config.py  logger.py  matcher.py  service.py
tg_filtering_bot/bot/: filtering_bot.py
tg_filtering_bot/channel_client/: client.py
tg_filtering_bot/crud/: crud.py  db.py  dto.py  schema.py
tg_filtering_bot/locales/: FilteringBot.pot
tg_filtering_bot/locales/en/LC_MESSAGES/: FilteringBot.mo  FilteringBot.po
tg_filtering_bot/locales/ru/LC_MESSAGES/: FilteringBot.mo  FilteringBot.po
