[tool.poetry]
name = "tg-filtering-bot"
version = "0.1.0"
description = ""
authors = ["Pavel Klevakin <klev.paul@gmail.com>"]
readme = "README.md"
packages = [{include = "tg_filtering_bot"}]

[tool.poetry.dependencies]
python = "^3.9"
telethon = "^1.27.0"
pydantic = {extras = ["dotenv"], version = "^1.10.7"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.9"}
alembic = "^1.10.3"
aiosqlite = "^0.18.0"
aiogram = "^2.25.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^1.2.0"
sqlalchemy = {extras = ["mypy"], version = "^2.0.9"}

[tool.pylint.format]
max-line-length = 120

[tool.poetry.scripts]
filtering_bot = "tg_filtering_bot.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
